--- a/pet-shop/styles.css
+++ b/pet-shop/styles.css
@@ -363,158 +363,6 @@ footer .social-icons a:hover {
     color: rgb(255, 157, 0);
 }
 
-
-/* Responsive */
-@media (max-width: 768px) {
-    #hero {
-        flex-direction: column;
-        text-align: center;
-        height: auto;
-    }
-
-    #hero h1 {
-        font-size: 2.5rem;
-    }
-
-    #hero p {
-        font-size: 1.25rem;
-    }
-
-    #hero .btn {
-        padding: 0.625rem 1.25rem;
-    }
-
-    .logo img {
-        height: 5rem;
-        width: 5rem;
-    }
-
-    nav {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    nav ul {
-        flex-direction: column;
-        width: 100%;
-    }
-
-    nav ul li {
-        margin: 0.5rem 0;
-    }
-
-    .login-button {
-        margin-left: 0;
-        width: auto;
-        text-align: center;
-    }
-
-    #products {
-        padding: 1rem;
-    }
-
-    .product-wrapper {
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .product-container {
-        width: 100%;
-        height: auto;
-        flex-direction: column;
-        border-radius: 0.5rem;
-    }
-
-    .product-item img {
-        width: 100%;
-        height: auto;
-    }
-
-    .contact-form {
-        width: 100%;
-        max-width: 100%;
-    }
-
-    footer {
-        padding: 1rem;
-    }
-    
-}
-
-@media (max-width: 480px) {
-    #hero {
-        flex-direction: column;
-        text-align: center;
-        height: auto;
-    }
-
-    #hero h1 {
-        font-size: 1.5rem;
-    }
-
-    #hero p {
-        font-size: 1rem;
-    }
-
-    #hero .btn {
-        padding: 0.625rem 1.25rem;
-    }
-
-
-    nav {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 0.5rem 4rem;
-    }
-
-
-    .login-button {
-      
-        padding: 0.5rem 1rem;
-        width: auto;
-        text-align: center;
-    }
-
-    #column-2 img {
-        width: 25rem;
-        height: 25rem;
-    }
-
-    #products {
-        padding: 1rem;
-    }
-
-    .product-wrapper {
-        flex-direction: column;
-        gap: 0.5rem;
-    }
-
-    .product-container {
-        width: 100%;
-        height: auto;
-        flex-direction: column;
-        border-radius: 0.5rem;
-    }
-
-    .product-item img {
-        width: 100%;
-        height: auto;
-    }
-
-    #contact {
-        padding: 1rem;
-    }
-
-    .contact-form {
-        width: 100%;
-        max-width: 100%;
-    }
-
-    footer {
-        padding: 0.5rem;
-    }
-
-    footer .social-icons a {
-        font-size: 1.25rem;
-    }
+#hamburger, #close{
+    display: none;
 }
