logic-nolep: is-ajax-post change bg color

--- a/inventory-ajax-post/style.css
+++ b/inventory-ajax-post/style.css
@@ -21,7 +21,7 @@ body {
 .login-container {
     display: flex;
     margin: 1rem;
-    background-color: #00d315;
+    background-color: #61a706;
     box-shadow: 8px 8px 0px #000000;
     height: 85%;
     width: 80%;
