--- a/inventory-ajax-post/style.css
+++ b/inventory-ajax-post/style.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ff8400;
+    background-color: #ff8a28;
 
     
 }
@@ -73,7 +73,7 @@ body {
     border: 3px solid black;
     border-left: none;
     border-right: none;
-    background-color: #ff8400;
+    background-color: #ff8a28;
     margin: 0;
     width: 100%;
     height: 4rem;
@@ -141,7 +141,7 @@ body {
 
 .form-group button {
     height: 3rem;
-    background-color: #ff8400;
+    background-color: #ff8a28;
     color: white;
     font-weight: bold;
     border: 3px solid #000000;
